# hikari

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Dependencies.cmake  ProjectOptions.cmake  README.md  gcovr.cfg
cmake/: CompilerWarnings.cmake  Cuda.cmake  Hardening.cmake  Linker.cmake  PackageProject.cmake  Sanitizers.cmake  StaticAnalyzers.cmake
include/hikari/: hikari.h
include/hikari/Core/: App.h  EntryPoint.h  Window.h
include/hikari/Util/: Logger.h
samples/: CMakeLists.txt  sample.cpp  settings.h.in
src/: CMakeLists.txt
src/Core/: App.cpp  Math.h  Mouse.h  Window.cpp  Window.h
src/Renderer/: Buffer.cpp  Buffer.h  Camera.h  Common.h  Cube.cpp  Cube.h  Descriptor.cpp  Descriptor.h  Image.cpp  Image.h  Model.cpp  Model.h  Pipeline.cpp  Pipeline.h  Rasterizer.cpp  Rasterizer.h  Raytracer.cpp  Raytracer.h  RenderEngine.cpp  RenderEngine.h  Renderer.cpp  Renderer.h  Skybox.cpp  Skybox.h  tiny_gltf_impl.cpp  vk_mem_alloc.cpp
src/Util/: Assert.h  Filesystem.cpp  Filesystem.h  Logger.cpp  vk_debug.h  vk_util.cpp  vk_util.h
src/hikari/: CMakeLists.txt
src/hikari/Core/: App.cpp  Window.cpp
src/hikari/Renderer/: Renderer.cpp  Renderer.h
src/hikari/Util/: Assert.h
src/shaders/: anyhit.rahit  closesthit.rchit  common.glsl  hitInfo.glsl  miss.rmiss  random.glsl  raygen.rgen  shader.frag  shader.vert  shadow.rmiss  skybox.frag  skybox.vert
